--- a/core/makefile
+++ b/core/makefile
@@ -4,3 +4,6 @@ test:
 	python3 main.py --solver=sac
 	python3 main.py --solver=greedy
 	python3 main.py --solver=optimal
+
+train:
+	python3 main.py --solver=sac --mode=train
