trained on knapsack with no contraint handling

--- a/core/makefile
+++ b/core/makefile
@@ -6,4 +6,10 @@ test:
 	python3 main.py --solver=optimal
 
 train:
-	python3 main.py --solver=sac --mode=train --autotune_entropy
+	python3 main.py --solver=sac --mode=train # --autotune_entropy
+
+plot_train:
+	python3 main.py --mode=train --scenario=plot_line --metric=actor_loss --n_smooth=20 & \
+	python3 main.py --mode=train --scenario=plot_line --metric=qf_loss --n_smooth=20 & \
+	python3 main.py --mode=train --scenario=plot_line --metric=reward --n_smooth=20 & \
+	wait
